<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryTutor"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_weight="0.17"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_higuru" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/str_daftarsiswa"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_namalengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_namalengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.21"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/str_namalengkap"
                android:textColorHint="@color/colorText"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/str_nik"
                android:textColorHint="@color/colorText"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_place"
                android:hint="@string/str_alamat"
                android:textColorHint="@color/colorText"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail"
                android:hint="@string/str_email"
                android:textColorHint="@color/colorText"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/str_password"
                android:textColorHint="@color/colorText"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_no_telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/input_telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/str_telp"
                android:textColorHint="@color/colorText"
                android:imeOptions="actionDone|actionSend" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/check_tos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/str_tos"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="home"
            android:text="@string/str_daftar"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/tv_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="0.07"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="login"
            android:text="@string/str_sdh_punya_akun"
            android:textAlignment="center"
            android:textColor="@color/tabTextColor" />

    </LinearLayout>
</ScrollView>
