<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryTutor"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimaryTutor"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_higuru" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/input_layout_password_login"
        android:layout_alignStart="@+id/input_layout_password_login">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:layout_alignLeft="@+id/input_layout_password_login"
            android:layout_alignStart="@+id/input_layout_password_login"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="48dp"
            android:drawableStart="@drawable/ic_mail"
            android:hint="@string/str_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorLink="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_email_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:paddingBottom="5dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/input_password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/str_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/textViewLupaPass"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="Lupa Kata Sandi ?"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/input_layout_password_login"
        android:layout_alignLeft="@+id/input_layout_password_login"
        android:layout_alignStart="@+id/input_layout_password_login"></TextView>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/input_layout_password_login"
        android:layout_alignRight="@+id/input_layout_password_login"
        android:layout_below="@+id/textViewLupaPass"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:onClick="home"
        android:text="@string/str_masuk"
        android:textSize="40sp"
        android:textColor="@android:color/background_light" />


    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnLogin"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="register"
        android:text="@string/str_blm_punya_akun"
        android:textAlignment="center"
        android:textColor="@color/tabTextColor" />



</RelativeLayout>